# LightAP

./: .gitignore  .gitmodules  CMAKE_REORGANIZATION_SUMMARY.md  CMakeLists.txt  LICENSE  README.md  build_and_install.sh  check_dependencies.sh  test_build.sh
docs/: DEPENDENCY_QUICK_REFERENCE.md  HYBRID_BUILD_MODE_GUIDE.md  INDEX.md  MODULE_DEPENDENCIES.md  visualize_dependencies.sh
examples/using_installed_modules/: CMakeLists.txt  README.md  main.cpp
